# compiler

./: CMakeDirectoryInformation.cmake  CMakeLists.txt  Makefile  Makefile.cmake  README.md  cmake_install.cmake  comprehensive_test.cu  comprehensive_test.glsl  comprehensive_test.sdl  id_arg_test.sdl  test_assign.glsl  test_improved.cu  test_improved.sdl  test_mixed_args.sdl
.github/: copilot-instructions.md
examples/: advanced.glsl  advanced.sdl  simple.cu  simple.glsl  simple.sdl  test.glsl  test.sdl
include/cli/: cli_parser.h
include/codegen/: base_generator.h  cuda_generator.h  glsl_generator.h
include/compiler/: compiler.h
include/lexer/: lexer.h
include/parser/: ast.h  ast_visitor.h  parser.h
include/semantic/: analyzer.h  symbol_table.h
include/utils/: error_handler.h  file_utils.h
release.dir/: build.make
sdl_compiler.dir/: DependInfo.cmake
sdl_compiler_lib.dir/: DependInfo.cmake  build.make  compiler_depend.internal  compiler_depend.make  flags.make  link.txt
sdl_compiler_lib.dir/src/codegen/: cuda_generator.cpp.o.d  glsl_generator.cpp.o.d
sdl_compiler_lib.dir/src/lexer/: lexer.cpp.o.d  token.cpp.o.d
sdl_compiler_lib.dir/src/parser/: ast.cpp.o.d  parser.cpp.o.d
sdl_compiler_lib.dir/src/utils/: file_utils.cpp.o.d
src/: main.cpp
src/cli/: cli_parser.cpp
src/codegen/: base_generator.cpp  cuda_generator.cpp  glsl_generator.cpp
src/compiler/: compiler.cpp
src/lexer/: lexer.cpp  token.cpp
src/parser/: ast.cpp  parser.cpp
src/semantic/: analyzer.cpp  symbol_table.cpp
src/utils/: error_handler.cpp  file_utils.cpp
tests/: CMakeLists.txt  test_codegen.cpp  test_integration.cpp  test_lexer.cpp  test_parser.cpp
